After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 790755 - Keywords are no longer searched
Keywords are no longer searched
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: general
3.26.x
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
: 791136 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2017-11-23 10:10 UTC by János Illés
Modified: 2017-12-02 22:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot of difference between search results in old and new control-center (44.10 KB, image/png)
2017-11-23 10:10 UTC, János Illés
  Details
shell: Include panel "keywords" in the row data (5.76 KB, patch)
2017-11-27 10:09 UTC, Felipe Borges
committed Details | Review

Description János Illés 2017-11-23 10:10:04 UTC
Created attachment 364263 [details]
Screenshot of difference between search results in old and new control-center

Since the upgrade to the new layout, the control center search functionality does not search the text inside the panels. It will only search the panel name and panel description. 

In the previous versions of the control center the search box showed results from the text inside panels. For example: search for "proxy". The expected result would be showing the Network panel but no results are shown instead. 

See attached screenshot for comparison with previous version.
Comment 1 Felipe Borges 2017-11-27 10:09:26 UTC
Created attachment 364486 [details] [review]
shell: Include panel "keywords" in the row data

This way GtkListBox filter functions can use the "keywords" in
order to provide accurate search results.
Comment 2 Rui Matos 2017-11-27 18:04:38 UTC
Review of attachment 364486 [details] [review]:

this looks fine. my comment below is more of "ideally" thing that I just noticed while reviewing

::: shell/cc-panel-list.c
@@ +900,2 @@
   /* And add to the search listbox too */
+  search_data = row_data_new (category, id, title, description, keywords, icon);

big picture comment, unrelated to this bug:

I'm not sure what Georges' original design for this widget was, but it seems like all this data duplication could be avoided by making CcPanelList aware of the CcShellModel and keep a model iter for each row instead of all these copies
Comment 3 Georges Basile Stavracas Neto 2017-11-28 01:25:38 UTC
(In reply to Rui Matos from comment #2)

> big picture comment, unrelated to this bug:
> 
> I'm not sure what Georges' original design for this widget was, but it seems
> like all this data duplication could be avoided by making CcPanelList aware
> of the CcShellModel and keep a model iter for each row instead of all these
> copies

You're right. In fact, while I'm preparing to work on the ability of hiding panels under certain conditions, I had this exact thought.

One more thing on the to-do list for 3.28 I guess.
Comment 4 Felipe Borges 2017-11-28 10:03:34 UTC
(In reply to Rui Matos from comment #2)
> I'm not sure what Georges' original design for this widget was, but it seems
> like all this data duplication could be avoided by making CcPanelList aware
> of the CcShellModel and keep a model iter for each row instead of all these
> copies

right.

(In reply to Georges Basile Stavracas Neto from comment #3)
> You're right. In fact, while I'm preparing to work on the ability of hiding
> panels under certain conditions, I had this exact thought.
> 
> One more thing on the to-do list for 3.28 I guess.

Is this going to be part of the changes you are going to land or you want me to work on it?
Comment 5 Felipe Borges 2017-11-28 10:05:18 UTC
Attachment 364486 [details] pushed as aaabf05 - shell: Include panel "keywords" in the row data
Comment 6 Georges Basile Stavracas Neto 2017-11-28 19:18:10 UTC
(In reply to Felipe Borges from comment #4)

> (In reply to Georges Basile Stavracas Neto from comment #3)
> > You're right. In fact, while I'm preparing to work on the ability of hiding
> > panels under certain conditions, I had this exact thought.
> > 
> > One more thing on the to-do list for 3.28 I guess.
> 
> Is this going to be part of the changes you are going to land or you want me
> to work on it?

I am going to work on it, unless someone beats me.
Comment 7 Piotr Drąg 2017-12-02 22:03:32 UTC
*** Bug 791136 has been marked as a duplicate of this bug. ***